# SFML-flappy-bird

./: CMakeLists.txt  README.md
include/: AssetManager.h  Bird.h  Collision.h  DEFINITIONS.h  Game.h  GameOverState.h  GameState.h  InputManager.h  Land.h  MainMenuState.h  Pipe.h  SplashState.h  State.h  StateMachine.h  displayHUD.h
src/: AssetManager.cpp  Bird.cpp  Collision.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  InputManager.cpp  Land.cpp  MainMenuState.cpp  Pipe.cpp  SplashState.cpp  StateMachine.cpp  displayHUD.cpp  main.cpp
